UX: fix alignment extra buttons in post controls (#22872)

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -374,6 +374,10 @@ nav.post-controls {
       margin-right: 0;
     }
   }
+
+  .extra-buttons .widget-button {
+    height: 100%;
+  }
 }
 
 .deleted {
